# superfret

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile  style.css
docs/pages/: getting_started.md  mainpage.md
examples/: CMakeLists.txt  midi_discover.cpp  midi_quick_chords.cpp  midi_scale.cpp
midi/: MidiOut.cpp  MidiOut.hpp  midi.h
music/: Note.hpp  Scale.hpp  music.h
notes/: Libraries.md
src/: CMakeLists.txt
src/midi/: MidiError.cpp  MidiError.hpp  MidiOut.cpp  MidiOut.hpp  midi.h
src/music/: Chord.hpp  Tone.hpp
tests/: CMakeLists.txt  midi.cc
